--- a/software/helloworld/Makefile
+++ b/software/helloworld/Makefile
@@ -1,11 +1,11 @@
 RISCV_PREFIX=riscv32-unknown-linux-gnu-
 CC=$(RISCV_PREFIX)gcc
 VERSION=$(shell $(CC) -dumpversion)
-CFLAGS=-nostartfiles -nostdlib -nostdinc -march=rv32ima_zicsr_zifencei -mabi=ilp32 -I/opt/riscv/riscv32-unknown-linux-gnu/include -I/opt/riscv/lib/gcc/riscv32-unknown-linux-gnu/$(VERSION)/include -static
+CFLAGS=-nostartfiles -nostdlib -nostdinc -march=rv32ima_zicsr_zifencei -mabi=ilp32 -I/opt/riscv/riscv32-unknown-elf/include -I/opt/riscv/lib/gcc/riscv32-unknown-linux-gnu/$(VERSION)/include -static
 AS=$(RISCV_PREFIX)as
 LD=$(RISCV_PREFIX)ld
 GLOSS=../gloss
-LDFLAGS=-L$(GLOSS) -L/opt/riscv/riscv32-unknown-linux-gnu/lib -L/opt/riscv/lib/gcc/riscv32-unknown-linux-gnu/$(VERSION)/lib -lcrt0 -lc -lm -lgloss_riscvx -lgloss -lg -lgcov -lgcc -Tlink.ld
+LDFLAGS=-L$(GLOSS) -L/opt/riscv/riscv32-unknown-elf/lib -L/opt/riscv/lib/gcc/riscv32-unknown-linux-gnu/$(VERSION)/lib -lcrt0 -lc -lm -lgloss_riscvx -lgloss -lg -lgcov -lgcc -Tlink.ld
 OBJCOPY=$(RISCV_PREFIX)objcopy
 TEST=helloworld
 SIMDIR=../../simulation
@@ -14,7 +14,7 @@ BOOTROMDIR=bootrom
 BOOTROM=bootrom
 
 run: $(TEST).elf $(BOOTROM).hex
-	make -C $(SIMDIR) -B SIMOPT=-DHTIF
+	make -C $(SIMDIR) SIMOPT=-DHTIF
 	cp $(SIMDIR)/$(SIM) $(SIM)
 	cp $(SIMDIR)/gtk.sh ./
 	./$(SIM) $< --no-sim-exit --no-log 2> /dev/null || true
